tests/substructural/check/copy_in_enum_payload_of_non_copy.err.expected
error: at 7:13: [SUB-CopyOfNonCopy] In function 'f', block 'entry': cannot copy non-Copy type Linear
   |
 7 |             w = Wrap::W(copy x);
   |             ^^^^^^^^^^^^^^^^^^^
  hint: since the type is not Copy, try moving it instead using 'move'
